[package]
name = "cmd_gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["blocking"] }
serde_json = "1.0.93"
serde = { version = "1.0", features = ["derive"] }
bat = "0.22.1"
chrono = { version = "0.4.23", features = ["serde"] }
libc = "0.2.139" # to get the parent pid to manage sessions
log = "0.4.17"
env_logger = "0.10.0"
eventsource-client = "0.11.0"
futures = "0.3.26"
tokio = { version = "1", features = ["full"] }
async-stream = "0.3.4"
iter-read = "0.3.1"

[[bin]]
name = "gpt"

  